Corrigiendo bugs
